# yellowCard

./: .gitignore  LICENSE  Makefile  README.md  refs.bib  relevant-papers.md  reviewer-comments.txt  setup.cfg
.github/workflows/: paper.yml
datasets/: Dataset3.ecsv  apw-simulated-precise.ecsv  apw-simulated.ecsv  fiducial2021.ecsv  vdm2012-radial.ecsv  vdm2012.ecsv
notebooks/: Barycentric-coordinate-frame-prototype.ipynb  Coordinate-velocity-stuff.ipynb  Likelihood-prototype.ipynb  Make-datasets.ipynb  Radial-orbit.ipynb  Simulate-data.ipynb  Simulate-twobody-data.ipynb  emcee-angle-parametrization.ipynb  likelihood-prototyping.ipynb  mcmc.ipynb  mcmc_main.ipynb  observables_class.ipynb  pymc3-analyze-runs.ipynb  pymc3-main.ipynb  slice-plots.ipynb
paper/: math_definitions.tex  refs.bib  reviewer-comments.txt  yellowCard_draft.tex
paper/published_ver/: refs.bib  yellowcard.tex
yellowcard/: __init__.py  coordinates.py  keplerianPlane.py  model.py  model_mixin.py  model_pymc3.py  model_select.py
