[metadata]
name = yellowcard
description = Local group timing argument
long_description = file: README.md
author = Katie Chamberlain
author_email = katiechambe@email.arizona.edu
url = https://github.com/katiechambe/yellowCard
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=4.1
setup_requires =
    setuptools_scm
    wheel
