[metadata]
name = yellowcard
description = Local group timing argument
long_description = file: README.md
author = Katie Chamberlain
author_email = katiechambe@email.arizona.edu
url = https://github.com/katiechambe/yellowCard
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
    astropy>=4.1
setup_requires =
    setuptools_scm
    wheel

[flake8]
max-line-length = 80
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
    docs/tutorials/*: E703
ignore =
    E402
    E226
    E741
    W504
    W503
